syntax = "proto3";

package istio.workload;

import "envoy/config/core/v3/config_source.proto";

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.istio.workload";
option java_outer_classname = "ExtensionProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/contrib/istio/workload";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

message BootstrapExtension {
  envoy.config.core.v3.ConfigSource config_source = 1;
}
